--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanistSystemuicontroller = "0.32.0"
-agp = "8.7.0-alpha03"
+agp = "8.7.1"
 appcompat = "1.7.0"
 coil = "2.5.0"
 coilCompose = "2.4.0"
